Initial project setup with Vaadin, Spring Boot, PostgreSQL integration, and database migration script. Includes basic README update and configuration files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-server.port=${PORT:8080}
-logging.level.org.atmosphere=warn
 
-# Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+logging.level.org.atmosphere = warn
+
+server.port = ${PORT:8080}
+
+spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url      = ${SPRING_DATASOURCE_URL}
+spring.datasource.username = ${SPRING_DATASOURCE_USERNAME}
 
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/flow/integrations/spring/configuration#special-configuration-parameters
-vaadin.allowed-packages=com.vaadin,org.vaadin,com.flowingcode,ch.schlierelacht
+vaadin.allowed-packages = com.vaadin,org.vaadin,com.flowingcode,ch.schlierelacht
+# Launch the default browser when starting the application in development mode
+vaadin.launch-browser   = true
