--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
         <flyway.version>12.0.1</flyway.version>
 
         <sonar-maven-plugin.version>5.3.0.6276</sonar-maven-plugin.version>
+        <testcontainers-jooq-codegen-maven-plugin.version>0.0.4</testcontainers-jooq-codegen-maven-plugin.version>
+
+        <jooq-codegen-skip>true</jooq-codegen-skip>
 
         <sonar.organization>sjucker</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -110,6 +113,70 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-jooq-codegen-maven-plugin</artifactId>
+                <version>${testcontainers-jooq-codegen-maven-plugin.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.testcontainers</groupId>
+                        <artifactId>testcontainers</artifactId>
+                        <version>2.0.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jooq</groupId>
+                        <artifactId>jooq-codegen</artifactId>
+                        <version>${jooq.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.testcontainers</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>1.21.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>${postgresql.version}</version>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>generate-jooq-sources</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <skip>${jooq-codegen-skip}</skip>
+                            <database>
+                                <type>POSTGRES</type>
+                                <containerImage>postgres:17.6</containerImage>
+                            </database>
+                            <flyway/>
+                            <jooq>
+                                <generator>
+                                    <database>
+                                        <excludes>flyway_schema_history</excludes>
+                                        <inputSchema>public</inputSchema>
+                                    </database>
+                                    <generate>
+                                        <daos>true</daos>
+                                        <springAnnotations>true</springAnnotations>
+                                        <springDao>true</springDao>
+                                        <javaTimeTypes>true</javaTimeTypes>
+                                    </generate>
+                                    <target>
+                                        <packageName>ch.schlierelacht.admin.jooq</packageName>
+                                        <directory>src/main/java</directory>
+                                    </target>
+                                </generator>
+                            </jooq>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
