Integrate Spring Actuator, logback configuration, and build info display.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,24 @@
 app.remember-me-key = ${REMEMBER_ME_KEY}
 
 logging.level.org.atmosphere = warn
+logging.mail.host            = ${LOGGING_MAIL_HOST}
+logging.mail.password        = ${LOGGING_MAIL_PASSWORD}
+logging.mail.port            = ${LOGGING_MAIL_PORT:587}
+logging.mail.to              = ${LOGGING_MAIL_TO}
+logging.mail.user            = ${LOGGING_MAIL_USER}
+
+management.endpoint.health.show-details   = never
+management.endpoints.web.exposure.include = health,info
+management.info.env.enabled               = true
 
 server.port = ${PORT:8080}
 
-spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.url      = ${SPRING_DATASOURCE_URL}
-spring.datasource.username = ${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password                = ${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url                     = ${SPRING_DATASOURCE_URL}
+spring.datasource.username                = ${SPRING_DATASOURCE_USERNAME}
+spring.servlet.multipart.max-file-size    = 100MB
+spring.servlet.multipart.max-request-size = 100MB
 
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/latest/flow/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.flowingcode,ch.schlierelacht
-# Launch the default browser when starting the application in development mode
+vaadin.exclude-urls     = /api/**
 vaadin.launch-browser   = true
