Integrate Cloudflare API support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 
-app.remember-me-key = ${REMEMBER_ME_KEY}
+app.cloudflare-account-id        = ${CLOUDFLARE_ACCOUNT_ID}
+# https://developers.cloudflare.com/fundamentals/api/get-started/create-token/
+app.cloudflare-api-token         = ${CLOUDFLARE_API_TOKEN}
+app.cloudflare-base-url          = https://api.cloudflare.com/client/v4
+app.cloudflare-imagedelivery-url = https://imagedelivery.net/08WjJu0y_NwzY_GFS74XCw
+app.remember-me-key              = ${REMEMBER_ME_KEY}
 
 logging.level.org.atmosphere = warn
 logging.mail.host            = ${LOGGING_MAIL_HOST}
